Fix page being too wide.

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,7 @@ body {
   background-size: cover !important;
   color: white;
   min-height: 100vh;
+  max-width: 100vw;
 }
 h1 {
   font-size: 1.6rem;
